# auto-req

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
scripts/: install.sh
scripts/wrappers/: pip3-wrapper.bat  pip3-wrapper.sh
src/auto_req/: __init__.py  cli.py  main.py
test/: test_main.py
