[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-req"
version = "0.1.0"
description = "Light-weight automatic package management for pip"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["pip", "requirements", "automation"]
authors = [
    { name = "Neil Ohene", email = "neilohene@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
pip = "auto_req.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pipauto"
Repository = "https://github.com/yourusername/pipauto.git"
Issues = "https://github.com/yourusername/pipauto/issues"
